--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.0  # Burada provider kütüphanesini ekliyoruz.
+  provider: ^6.0.0  
   cupertino_icons: ^1.0.8
   table_calendar: ^3.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
