--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: habit_tracker
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.0.0  
   table_calendar: ^3.0.0
   shared_preferences: ^2.0.15
+  charts_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
